clang/test/BSC/Positive/Method/Linkage/queue/queue.hbs
struct queue {
};
void struct queue::isEmpty(struct queue* this);
