clang/test/BSC/Negative/Method/Enum/enum_instance_function_multi_declaration_2/enum_header_1.hbs

enum E {
  X3
};

int enum E::to_int(enum E* this) { // expected-note {{previous definition is here}}
  return (int)*this;
}
